--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-site.title: {VLDB 2022 Tutorial on Language Models}
+page.title: {VLDB 2022 Tutorial on Language Models}
