--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: VLDB'22 Tutorial on XXL Language Models
-page.description: Material for the VLDB'22 tutorial on language models and applications in data management
+page.description: Material for the VLDB'22 tutorial on language models and their applications in data management
