--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: VLDB'22 Tutorial on XXL Language Models
-description: Material for the VLDB'22 tutorial on language models and their applications in data management
+title: Tutorial on XXL Language Models for Data Scientists
+description: Material for my VLDB'22 and BTW'23 tutorials on language models and their applications in data management
