--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Tutorial on XXL Language Models for Data Scientists
+title: Tutorial on XXL Language Models
 description: Material for my VLDB'22 and BTW'23 tutorials on language models and their applications in data management
